buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.bmuschko:gradle-nexus-plugin:2.3.1'
    }
}

plugins {
    id 'java-library'
    id 'signing'
    id 'io.codearte.nexus-staging' version '0.30.0'
    id "io.freefair.lombok" version "5.3.0"
    id 'jacoco'
}

apply plugin: 'com.bmuschko.nexus'

group 'it.firegloves'
version '1.7.0'

sourceCompatibility = 1.8

def poiVersion = '5.0.0'
def comonsLang3Version = '3.10'
def comonsCollectionsVersion = '4.4'
def comonsMath3Version = '3.6.1'
def slf4jVersion = '1.7.30'

repositories {
    mavenCentral()
}

dependencies {

    // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: poiVersion

    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: comonsLang3Version

    // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
    compile group: 'org.apache.commons', name: 'commons-math3', version: comonsMath3Version

    // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
    compile group: 'org.apache.commons', name: 'commons-collections4', version: comonsCollectionsVersion

    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
	compile group: 'org.slf4j', name: 'slf4j-api', version: slf4jVersion

    testCompile group: 'junit', name: 'junit', version: '4.12'

    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
    testCompile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.0'

    // https://mvnrepository.com/artifact/org.mockito/mockito-core
    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.27.0'

    // https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all
    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'

    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
    testCompile group: 'mysql', name: 'mysql-connector-java', version: '8.0.23'
}

modifyPom {
    project {
        name 'MemPOI'
        description 'A library to simplify export from database to Excel files using Apache POI'
        url 'https://github.com/firegloves/MemPOI'
        inceptionYear '2019'

        scm {
            url 'https://github.com/firegloves/MemPOI.git'
            connection 'scm:git:git://github.com/firegloves/MemPOI.git'
            developerConnection 'cm:git:ssh://github.com/firegloves/MemPOI.git'
        }

        licenses {
            license {
                name 'MIT License'
                url 'http://www.opensource.org/licenses/mit-license.php'
            }
        }

        developers {
            developer {
                id 'firegloves'
                name 'Luca Corsetti'
                email 'lucorset@gmail.com'
            }
        }
    }
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}

jacocoTestReport {
    reports {
        xml.enabled true
        xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
        csv.enabled false
        html.enabled false
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.7
            }
            failOnViolation true
        }
    }

    dependsOn jacocoTestReport
}

check.dependsOn jacocoTestCoverageVerification

extraArchive {
    sources = true
    tests = true
    javadoc = true
}

nexus {
    sign = true
    repositoryUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
    snapshotRepositoryUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
}

nexusStaging {
    packageGroup = "it.firegloves" //optional if packageGroup == project.getGroup()
    stagingProfileId = "b2ff466b0efb70" //when not defined will be got from server using "packageGroup"
}
